# chatgpt_by_voice

./: Cargo.toml  README.md
src/: main.rs
src/openai/: mod.rs
src/recorder/: mod copy.rs_base  mod.rs
src/ui/: mod.rs
